# meeting-prompter

./: .gitignore  ARCHITECTURE.md  BUGS.yaml  CLAUDE.md  FEATURES.yaml  PROGRESS-archive.yaml  PROGRESS.yaml  README.md  STATUS-overnight.md  coach.py  config.yaml  package-lock.json  requirements.txt
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
docs/: DEVELOPER-GUIDE.md  distillation.md  overnight-brief.md  ws14-live-call-checklist.md
lib/: audio_capture.py  audio_features.py  audio_protocol.py  config.py  dashboard.py  diarization.py  filters.py  gating.py  lfm2_wrapper.py  llama_compat.py  orchestrator.py  paths.py  rag_engine.py  rag_generator.py  speaker_enrollment.py  speaker_tracker.py  stream_dedup.py  system_audio_capture.py  text_refiner.py  warm_runtime.py
scripts/: eval_probe_head.py  exp_model_retrieval_compare.py  exp_pipeline_probe.py  meeting-prompter-backend  package.sh  spike_encoder_linear_probe.py  spike_encoder_smoke.py  spike_retrieval_eval.py  spike_vlm_active_speaker.py
tests/: test_attribution_resolver.py  test_audio_capture.py  test_audio_protocol.py  test_corpus_active.py  test_corpus_distiller.py  test_corpus_incremental.py  test_corpus_readiness.py  test_corpus_routes.py  test_diarization.py  test_filters.py  test_gating.py  test_intelligence_layer.py  test_lab.py  test_lexical_consistency.py  test_lfm2_wrapper.py  test_linear_probe_head.py  test_notes_generator.py  test_notion_block_converter.py  test_notion_exporter.py  (+20 more)
(+376 files in other folders)
