[package]
name = "meeting-prompter"
version = "2.0.0"
description = "Real-time meeting intelligence desktop app"
authors = [""]
edition = "2021"

[lib]
name = "meeting_prompter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
